# informatics-project

server/: Cargo.toml  README.md
server/data/: 123.txt
server/data/infos/: 123
server/src/: lib.rs  main.rs
